--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -17,6 +17,7 @@ div.media-lib {
     border-color: #dddddd;
     & i { margin-right: 4px; }
     &.btn-default { background-color: #FFFFFF; }
+    &:focus, &:active:focus { outline: none; }
   }
 
   ul {
@@ -26,13 +27,16 @@ div.media-lib {
   }
 
   div.media-nav-bar {
-    & > div  {
+    min-height: 50px;
+    border-bottom: 1px solid #DCDCDC;
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+
+    .media-lib-container  {
       display: flex;
       flex-wrap: wrap;
-      border-bottom: 1px solid #DCDCDC;
-      column-gap: 8px;
-      row-gap: 8px;
-      padding: 8px;
+      gap: 8px;
     }
 
     ul.media-lib-list-breadcrumb {
