refactor(core/media-lib): media library config to config namespace

--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'emsco-component' %}
 {# @var template \EMS\CoreBundle\Core\Component\MediaLibrary\Template\MediaLibraryTemplate #}
-{# @var config \EMS\CoreBundle\Core\Component\MediaLibrary\MediaLibraryConfig #}
+{# @var config \EMS\CoreBundle\Core\Component\MediaLibrary\Config\MediaLibraryConfig #}
 
 {%- block media_lib_header -%}
     {% apply spaceless %}
