--- a/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'emsco-component' %}
 {# @var template \EMS\CoreBundle\Core\Component\MediaLibrary\Template\MediaLibraryTemplate #}
-{# @var config \EMS\CoreBundle\Core\Component\MediaLibrary\MediaLibraryConfig #}
+{# @var config \EMS\CoreBundle\Core\Component\MediaLibrary\Config\MediaLibraryConfig #}
 
 <div class="media-lib" id="{{ config.id }}" data-hash="{{ hash }}">
     <div class="media-nav-bar"></div>
