--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -1,36 +1,40 @@
 {% trans_default_domain 'emsco-component' %}
 {# @var template \EMS\CoreBundle\Core\Component\MediaLibrary\Template\MediaLibraryTemplate #}
 {# @var config \EMS\CoreBundle\Core\Component\MediaLibrary\Config\MediaLibraryConfig #}
+{# @var mediaFile \EMS\CoreBundle\Core\Component\MediaLibrary\File\MediaLibraryFile #}
 
 {%- block media_lib_header -%}
-    {% apply spaceless %}
-        <div class="media-lib-container">
-            {{ template.block('media_lib_button_home', _context)|raw }}
-            {{ template.block('media_lib_button_folder_add', _context)|raw }}
-            {{ template.block('media_lib_button_upload', _context)|raw }}
-            {{ template.block('media_lib_breadcrumb', _context)|raw }}
-        </div>
-    {% endapply %}
+    <div class="media-lib-container">
+        {{ template.block('media_lib_button_home', _context)|raw }}
+        {{ template.block('media_lib_button_folder_add', _context)|raw }}
+        {{ template.block('media_lib_button_upload', _context)|raw }}
+        {% if mediaFile is defined %}
+            {{ template.block('media_lib_button_file_delete', _context)|raw }}
+        {% endif %}
+        {{ template.block('media_lib_breadcrumb', _context)|raw }}
+    </div>
 {%- endblock media_lib_header -%}
 
 {%- block media_lib_file_row_header -%}
-    {% apply spaceless %}
-        <li>
-            <div>Name</div>
-            <div>Type</div>
-            <div class="text-right">Size</div>
-        </li>
-    {% endapply %}
+    <li>
+        <div>Name</div>
+        <div>Type</div>
+        <div class="text-right">Size</div>
+    </li>
 {%- endblock media_lib_file_row_header -%}
 
+{%- block media_lib_file_rows -%}
+    {% for mediaFile in mediaFiles|default([]) %}
+        {{ template.block('media_lib_file_row', _context)|raw }}
+    {% endfor %}
+{%- endblock media_lib_file_rows -%}
+
 {%- block media_lib_file_row -%}
-    {% apply spaceless %}
-        <li>
-            <div><a href="{{ url }}" download="{{ media.file.filename }}" data-ems-id="{{ media.emsId }}">{{ media.file.filename }}</a></div>
-            <div>{{ media.file.mimetype|trans({}, 'emsco-mimetypes') }}</div>
-            <div class="text-right">{{ media.file.filesize|format_bytes }}</div>
-        </li>
-    {% endapply %}
+    <li class="media-lib-item" data-id="{{ mediaFile.emsId }}">
+        <div><a href="{{ mediaFile.urlView }}" download="{{ mediaFile.file.filename }}" data-ems-id="{{ mediaFile.emsId }}">{{ mediaFile.file.filename }}</a></div>
+        <div>{{ mediaFile.file.mimetype|trans({}, 'emsco-mimetypes') }}</div>
+        <div class="text-right">{{ mediaFile.file.filesize|format_bytes }}</div>
+    </li>
 {%- endblock media_lib_file_row -%}
 
 {%- block media_lib_footer -%}
@@ -49,6 +53,12 @@
     </button>
 {%- endblock media_lib_button_folder_add -%}
 
+{%- block media_lib_button_file_delete -%}
+    <button class="btn btn-sm btn-default btn-file-delete" data-id="{{ mediaFile.emsId }}">
+        <i class="fa fa-remove" aria-hidden="true"></i> {{- buttonLabel|default('media_library.file.delete.title'|trans) -}}
+    </button>
+{%- endblock media_lib_button_file_delete -%}
+
 {%- block media_lib_button_upload -%}
     <input type="file" id="media-lib-upload-{{ id }}" class="file-uploader-input" multiple="multiple">
     <label class="btn btn-sm btn-default" for="media-lib-upload-{{ id }}">
@@ -57,12 +67,15 @@
 {%- endblock media_lib_button_upload -%}
 
 {% block media_lib_breadcrumb %}
-    {%- if folder -%}
+    {%- if folder is defined -%}
         <ul class="media-lib-list-breadcrumb">
             <li><button class="breadcrumb-item">Home</button></li>
             {%- for parent in folder.parents -%}
                 <li><button class="breadcrumb-item" data-id="{{ parent.id }}">{{ parent.name }}</button></li>
             {%- endfor -%}
+            {% if mediaFile is defined %}
+                <li><button>{{ mediaFile.file.filename }}</button></li>
+            {% endif %}
         </ul>
     {%- endif -%}
 {% endblock media_lib_breadcrumb %}
