--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/html5.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/html5.html.twig
@@ -11,7 +11,7 @@
         <meta name="author" content="https://github.com/ems-project" />
         <link rel="stylesheet" href="{{ asset('app.css', 'emsadminui') }}">
         {%- block stylesheets %}{% endblock %}
-        <link rel="icon" sizes="128x128" type="image/png" href="{{ asset('images/icon-128.png', 'emsadminui') }}" />
+        <link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
         <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/icon-128.png', 'emsadminui') }}">
         {%- block extraheader %}{% endblock %}
     </head>
