--- a/EMS/core-bundle/src/Resources/views/base.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-	<link rel="icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}" />
+	<link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
     <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}">
 
     {%- block extraheader %}{% endblock %}
