--- a/EMS/core-bundle/src/Resources/views/base-light.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base-light.html.twig
@@ -30,7 +30,7 @@
     <![endif]-->
 
 	<link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
-    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}?v=12">
+    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
 
     {%- block extraheader %}{% endblock %}
 </head>
