--- a/EMS/core-bundle/src/Resources/views/user/login.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/login.html.twig
@@ -16,7 +16,7 @@
     <![endif]-->
 
     <link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
-    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}">
+    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
 </head>
 <body class="hold-transition login-page">
 <div class="login-box">
