--- a/EMS/core-bundle/src/Resources/views/ems-core/browserconfig.xml.twig
+++ b/EMS/core-bundle/src/Resources/views/ems-core/browserconfig.xml.twig
@@ -3,7 +3,7 @@
   <msapplication>
     <tile>
       <square150x150logo src="{{ asset('mstile-150x150.png') }}"/>
-      <TileColor>{{ themeColor }}</TileColor>
+      <TileColor>{{ themeColor|ems_color.rgb }}</TileColor>
     </tile>
   </msapplication>
 </browserconfig>
