--- a/EMS/core-bundle/src/Resources/views/ems-core/site.webmanifest.twig
+++ b/EMS/core-bundle/src/Resources/views/ems-core/site.webmanifest.twig
@@ -13,8 +13,8 @@
             "type": "image/png"
         }
     ],
-    "theme_color": themeColor|ems_color.rgb,
-    "background_color": themeColor|ems_color.rgb,
+    "theme_color": "ems-#{themeColor}"|ems_color.rgb,
+    "background_color": "ems-#{themeColor}"|ems_color.rgb,
     "display": "standalone"
 } -%}
 {{ data|json_encode|raw }}
