--- a/EMS/core-bundle/src/Resources/views/base.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base.html.twig
@@ -31,6 +31,7 @@
 
 	<link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
     <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
+    <link rel="manifest" href="{{ path('core-site-webmanifest') }}" />
 
     {%- block extraheader %}{% endblock %}
 </head>
