--- a/EMS/core-bundle/src/Resources/views/user/login.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/login.html.twig
@@ -17,6 +17,7 @@
 
     <link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
     <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
+    <link rel="manifest" href="{{ path('core-site-webmanifest') }}" />
 </head>
 <body class="hold-transition login-page">
 <div class="login-box">
