--- a/EMS/core-bundle/src/Resources/views/ems-core/browserconfig.xml.twig
+++ b/EMS/core-bundle/src/Resources/views/ems-core/browserconfig.xml.twig
@@ -2,7 +2,7 @@
 <browserconfig>
   <msapplication>
     <tile>
-      <square150x150logo src="{{ asset('mstile-150x150.png') }}"/>
+      <square150x150logo src="{{ path('core-png-icon', {name: 'mstile',width: 150, height: 150}) }}"/>
       <TileColor>{{ "ems-#{themeColor}"|ems_color.rgb }}</TileColor>
     </tile>
   </msapplication>
