--- a/EMS/core-bundle/src/Resources/views/ems-core/site.webmanifest.twig
+++ b/EMS/core-bundle/src/Resources/views/ems-core/site.webmanifest.twig
@@ -3,12 +3,12 @@
     "short_name": ems_shortname|striptags,
     "icons": [
         {
-            "src": path('core-android-chrome-icon', {width: 192, height: 192}),
+            "src": path('core-png-icon', {name: 'android-chrome', width: 192, height: 192}),
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": path('core-android-chrome-icon', {width: 512, height: 512}),
+            "src": path('core-png-icon', {name: 'android-chrome',width: 512, height: 512}),
             "sizes": "512x512",
             "type": "image/png"
         }
