--- a/demo/src/css/components/_navbar.scss
+++ b/demo/src/css/components/_navbar.scss
@@ -1,11 +1,11 @@
 .navbar {
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     min-height: $header-height-lg;
   }
   .navbar-brand > img {
     width: 148px;
     height: 38px;
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       width: 181px;
       height: 46px;
     }
@@ -20,12 +20,9 @@
     @include media-breakpoint-up(lg) {
       margin-right: 1em;
     }
-    @include media-breakpoint-up(xl) {
-      margin-right: 2.125em;
-    }
     &.divider-top {
       border-top: 1px solid rgba($white,25%);
-      @include media-breakpoint-up(lg) {
+      @include media-breakpoint-up(xl) {
         border: 0;
       }
     }
@@ -62,7 +59,7 @@
 }
 
 header {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(lg) {
     .navbar {
       z-index: $zindex-fixed;
       .navbar-collapse {
@@ -94,7 +91,7 @@ header {
   }
   .navbar-nav .nav-item {
     text-align: center;
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       text-align: left;
     }
     .nav-link {
@@ -103,7 +100,7 @@ header {
   }
 }
 #dropdown-language {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(lg) {
     .btn {
       color: $white;
     }
