--- a/demo/skeleton/template/variables.twig
+++ b/demo/skeleton/template/variables.twig
@@ -15,6 +15,8 @@
     {% set footer_menu = 'section:39d3ffdd-6ac3-4828-a1f6-970b1b884ce1' %}
     {% set header_menu = 'section:1e617cf9-6b19-4c33-90ba-5a4c8feff062' %}
 
+    {% set news_page = 'page:af70fcc8-e4b3-4e20-97fc-fd91fad751d9' %}
+
     {% set monthsTrans = {
         '%January%': 'month.January'|trans,
         '%February%': 'month.February'|trans,
