--- a/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
+++ b/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
@@ -62,7 +62,11 @@
     <li>{{ template.block('jmn_button_item_edit', _context)|raw }}</li>
     {% if item.children|length == 0 %}
         <li>
-            {{ template.block('jmn_button_item_delete', _context)|raw }}
+            {% if item.type == 'page' and page and pageInfo %}
+                <button class="btn-detach-page" data-item-id="{{ item.id }}" data-page-id="{{ page.id }}">Detach page</button>
+            {% else %}
+                {{ template.block('jmn_button_item_delete', _context)|raw }}
+            {% endif %}
         </li>
     {% endif %}
 {%- endblock jmn_button_item_more_menu -%}
