feat(admin): colorized app icons (#634)
Co-authored-by: David mattei <d.mattei89@gmail.com>

--- a/EMS/core-bundle/src/Resources/views/base-light.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base-light.html.twig
@@ -29,8 +29,9 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-	<link rel="icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}?v=12" />
-    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}?v=12">
+	<link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
+    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
+    <link rel="manifest" href="{{ path('core-site-webmanifest') }}" />
 
     {%- block extraheader %}{% endblock %}
 </head>
