--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -11,8 +11,9 @@
     <title>{{ ems_shortname|striptags }}: {% block title %}elasticMS{% endblock %}</title>
 
 
-	<link rel="icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}" />
-    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/fav-icon.png', 'emscore') }}">
+	<link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
+    <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
+    <link rel="manifest" href="{{ path('core-site-webmanifest') }}" />
 
     {%- block extraheader %}{% endblock %}
 </head>
