--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/html5.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/html5.html.twig
@@ -11,8 +11,9 @@
         <meta name="author" content="https://github.com/ems-project" />
         <link rel="stylesheet" href="{{ asset('app.css', 'emsadminui') }}">
         {%- block stylesheets %}{% endblock %}
-        <link rel="icon" sizes="128x128" type="image/png" href="{{ asset('images/icon-128.png', 'emsadminui') }}" />
-        <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ asset('images/icon-128.png', 'emsadminui') }}">
+        <link rel="icon" sizes="128x128" type="image/png" href="{{ path('core-favicon') }}" />
+        <link rel="apple-touch-icon" sizes="128x128" type="image/png" href="{{ path('core-apple-touch-icon') }}">
+        <link rel="manifest" href="{{ path('core-site-webmanifest') }}" />
         {%- block extraheader %}{% endblock %}
     </head>
     <body{% with { attr: body_attr|default([]) } %}{{ block('attributes', '@EMSAdminUI/bootstrap5/base/helpers.html.twig') }}{% endwith %}>
