chore: from prod

--- a/demo/skeleton/template/page/card/user_group.html.twig
+++ b/demo/skeleton/template/page/card/user_group.html.twig
@@ -11,17 +11,23 @@
                 <dd>{{ usergroup.date|date('j %F% Y - H:i')|replace(monthsTrans|default({})) }}</dd>
                 <dt>{{ 'usergroup.team-meeting'|trans }}</dt>
                 <dd>{{ usergroup.duration }}</dd>
-                <dt>{{ 'usergroup.topic'|trans }}</dt>
-                <dd>{{ attribute(usergroup, locale).body|emsch_routing }}</dd>
+                {% if attribute(usergroup, locale).body is defined %}
+                    <dt>{{ 'usergroup.topic'|trans }}</dt>
+                    <dd>{{ attribute(usergroup, locale).body|emsch_routing }}</dd>
+                {% endif %}
             </dl>
             <hr>
         </div>
         <div class="col-12 col-lg-4 offset-lg-1">
-            <img class="news-image img-fluid rounded-circle mx-auto mb-4" data-src="{{ ems_asset_path(usergroup.picture) }}" alt="140x140" src="{{ ems_asset_path(usergroup.picture) }}" data-holder-rendered="true">
-            <dl>
-                <dt>{{ 'usergroup.facilitator'|trans }}</dt>
-                <dd>{{ usergroup.facilitator_name }}</dd>
-            </dl>
+            {% if usergroup.picture is defined %}
+                <img class="news-image img-fluid rounded-circle mx-auto mb-4" data-src="{{ ems_asset_path(usergroup.picture) }}" alt="140x140" src="{{ ems_asset_path(usergroup.picture) }}" data-holder-rendered="true">
+            {% endif %}
+            {% if usergroup.facilitator_name is defined %}
+                <dl>
+                    <dt>{{ 'usergroup.facilitator'|trans }}</dt>
+                    <dd>{{ usergroup.facilitator_name }}</dd>
+                </dl>
+            {% endif %}
         </div>
     </div>
 {% endblock card %}
