--- a/demo/skeleton/template/page/blocks/releases.html.twig
+++ b/demo/skeleton/template/page/blocks/releases.html.twig
@@ -117,7 +117,8 @@
         <section class="py-5 py-lg-8">
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
-                    {% for version in features.hits.hits|map(p => p._source.version)|reduce((carry, v) => v in carry ? carry : carry|merge([v]), []) %}
+                    {# Remove the following section with es > 7.11 '|map(p => p|split('.'))|sort((a, b) => a[0]|default(0) == b[0]|default(0) ? b[1]|default(0) <=> a[1]|default(0) : b[0]|default(0) <=> a[0]|default(0))|map(p => p|join('.'))' #}
+                    {% for version in features.hits.hits|map(p => p._source.version)|reduce((carry, v) => v in carry ? carry : carry|merge([v]), [])|map(p => p|split('.'))|sort((a, b) => a[0]|default(0) == b[0]|default(0) ? (a[1]|default(0) == b[1]|default(0) ? b[2]|default(0) <=> a[2]|default(0) : b[1]|default(0) <=> a[1]|default(0)) : b[0]|default(0) <=> a[0]|default(0))|map(p => p|join('.')) %}
                         <div class="release-item">
                             <h2>
                                 {{ 'block.release.title'|trans({'%version%': version}) }}
