fix(admin/jmn): link fieldType needs environment
If the structure has a different environment, 'default' for example

--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -1030,7 +1030,12 @@
 	{%- set jmnQuery = displayOptions.query|default(false) -%}
 
 	{%- if jmnField and jmnQuery and dataField.rawData is not null -%}
-		{%- set hits = { index:  dataField.fieldType.contentType.environment.alias, body: jmnQuery}|search.hits.hits -%}
+        {% if displayOptions.environment is not null %}
+            {% set index = displayOptions.environment|emsco_get_environment.alias %}
+        {% else %}
+            {% set index = dataField.fieldType.contentType.environment.alias %}
+        {% endif %}
+		{%- set hits = { index: index, body: jmnQuery}|search.hits.hits -%}
 		{%- set structures = [] -%}
 		{%- for h in hits -%}
 			{% set structures = structures|merge([{
