--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -1,11 +1,11 @@
 {% trans_default_domain 'EMSCoreBundle' %}
 
-{% macro renderDataField(dataField, source, compare, compareRawData) %}
-	{{ _self.renderDataFieldBlock(dataField, source, compare, compareRawData) }}
+{% macro renderDataField(dataField, source, compare, compareRawData, locale = null) %}
+	{{ _self.renderDataFieldBlock(dataField, source, compare, compareRawData, '', [], locale) }}
 	{{ _self.messages(dataField) }}
 {% endmacro %}
 
-{% macro renderDataFieldBlock(dataField, source, compare, compareRawData, blockName = '', path = []) %}
+{% macro renderDataFieldBlock(dataField, source, compare, compareRawData, blockName = '', path = [], locale = null) %}
 	{% if blockName is same as('') %}
 		{% set blockName = dataField.fieldType.type|replace({'\\': '_'}) %}
 	{% endif %}
@@ -16,6 +16,7 @@
 		'compare': compare,
 		'compareRawData': compareRawData,
 		'path': path|merge([dataField.fieldType.name]),
+        'locale': locale
 		}
 	%}
 		{{ block(blockName) }}
@@ -43,7 +44,7 @@
 {% endblock %}
 
 {% block EMS_CoreBundle_Form_DataField_IndexedAssetFieldType %}
-	{{ _self.renderDataFieldBlock(dataField, source, compare, compareRawData, 'EMS_CoreBundle_Form_DataField_AssetFieldType', path) }}
+	{{ _self.renderDataFieldBlock(dataField, source, compare, compareRawData, 'EMS_CoreBundle_Form_DataField_AssetFieldType', path, locale) }}
 {% endblock %}
 
 
@@ -296,7 +297,7 @@
 							<div class="row">
 								{% for grandchild in child.getChildren %}
 									<div class="{% if grandchild.fieldType.displayOptions.class is defined and grandchild.fieldType.displayOptions.class  %}{{ grandchild.fieldType.displayOptions.class }}{%else%}col-md-12{% endif %}">
-										{{ _self.renderDataFieldBlock(grandchild, source, compare, (attribute(compareCollectionRawData, idx) is defined?attribute(compareCollectionRawData, idx):null), '', subpath) }}
+										{{ _self.renderDataFieldBlock(grandchild, source, compare, (attribute(compareCollectionRawData, idx) is defined?attribute(compareCollectionRawData, idx):null), '', subpath, locale) }}
 									</div>
 									{% if grandchild.fieldType.displayOptions.lastOfRow is defined and grandchild.fieldType.displayOptions.lastOfRow %}
 										<div class="clearfix"></div>
@@ -315,7 +316,7 @@
 {% block EMS_CoreBundle_Form_DataField_HolderFieldType %}
     {% for child in dataField.getChildren|filter(c => false == c.fieldType.deleted) %}
         <div class="{{ child.fieldType.displayOptions.class|default('col-md-12') }}">
-            {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path) }}
+            {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path, locale) }}
         </div>
         {% if child.fieldType.displayOptions.lastOfRow|default(false) %}
             <div class="clearfix"></div>
@@ -350,7 +351,7 @@
 	<div class="row">
 		{% for child in dataField.getChildren|filter(c => false == c.fieldType.deleted) %}
 			<div class="{% if child.fieldType.displayOptions.class is defined and child.fieldType.displayOptions.class  %}{{ child.fieldType.displayOptions.class }}{%else%}col-md-12{% endif %}">
-				{{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path) }}
+				{{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path, locale) }}
 			</div>
 			{% if child.fieldType.displayOptions.lastOfRow is defined and child.fieldType.displayOptions.lastOfRow %}
                 <div class="clearfix"></div>
@@ -389,7 +390,7 @@
 
     {% for child in dataField.getChildren|filter(child => not child.fieldType.deleted) %}
 	<div class="{% if child.fieldType.displayOptions.class is defined and child.fieldType.displayOptions.class  %}{{ child.fieldType.displayOptions.class }}{%else%}col-md-12{% endif %}">
-				{{ _self.renderDataFieldBlock(child, source, compare, compareSubRawData, '', path) }}
+				{{ _self.renderDataFieldBlock(child, source, compare, compareSubRawData, '', path, locale) }}
 			</div>
 			{% if child.fieldType.displayOptions.lastOfRow is defined and child.fieldType.displayOptions.lastOfRow %}
 				<div class="clearfix"></div>
@@ -410,11 +411,14 @@
 	{% for value in values %}
 		{% set choices = choices|merge({(value): attribute(labels, loop.index0)|default(value)}) %}
 	{% endfor %}
+
+    {% if locale != null and locale in values %}
+        {% set values = [locale]|merge(values|filter(v => v != locale))  %}
+    {% endif %}
+
 	{% if dataField.fieldType.displayOptions.localePreferredFirst|default(false) and app.user.localePreferred|default(false) and app.user.localePreferred in values %}
 		{% set values = values|sort((a, b) => a == app.user.localePreferred ? -1 : b == app.user.localePreferred ? 1 : 0) %}
 	{% endif %}
-
-
 
 	<div class="nav-tabs-custom">
 		<ul class="nav nav-tabs">
@@ -432,7 +436,7 @@
 					{% set childData = source[value]|default([]) %}
 					{% set childCompareData = compareRawData[value]|default([]) %}
 					{% for grandchild in dataField.getChildren.get(value).getChildren|default([]) %}
-						{{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([loop.index0])) }}
+						{{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([loop.index0]), locale) }}
 					{% endfor %}
 				</div>
 			{% endfor %}
@@ -508,7 +512,7 @@
 								{% set childData = source[key]|default([]) %}
 								{% set childCompareData = compareRawData[key]|default([]) %}
 								{% for grandchild in child.getChildren|default([]) %}
-									{{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([counter])) }}
+									{{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([counter]), locale) }}
 								{% endfor %}
 							</div>
 						{% endwith %}
@@ -516,7 +520,7 @@
 					{% endfor %}
 				{% elseif 'EMS\\CoreBundle\\Form\\DataField\\ContainerFieldType' == child.fieldType.type|default(null) %}
 					<div class="tab-pane{% if counter == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab">
-						{{ _self.renderDataFieldBlock(child, source, compare, compareRawData) }}
+						{{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', [], locale) }}
 					</div>
 					{% set counter = counter + 1 %}
 				{% else %}
@@ -526,7 +530,7 @@
 						}
 					%}
 						<div class="tab-pane{% if counter == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab">
-							{{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path|merge([counter])) }}
+							{{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path|merge([counter]), locale) }}
 						</div>
 					{% endwith %}
 					{% set counter = counter + 1 %}
@@ -1326,7 +1330,7 @@
         {% set errorMessage = 'view.macros.data-field-type.form.not-found' %}
     {% endif %}
     {% if form is defined and form %}
-        {{ _self.renderDataFieldBlock(emsco_get_data_field(form), source, compare, compareRawData, '', path) }}
+        {{ _self.renderDataFieldBlock(emsco_get_data_field(form), source, compare, compareRawData, '', path, locale) }}
     {% else %}
         <div class="panel panel-warning">
             <div class="panel-heading">
