--- a/EMS/core-bundle/src/Resources/views/email/xliff/extract.email.html.twig
+++ b/EMS/core-bundle/src/Resources/views/email/xliff/extract.email.html.twig
@@ -13,6 +13,17 @@
 </head>
 <body>
     <p>Please find in attachment the XLIFF file.</p>
+    <p>
+        Job arguments:
+        <ul>
+            <li>Source: {{ source }}</li>
+            <li>Target: {{ target }}</li>
+            <li>Fields: {{ fields|join(', ') }}</li>
+            <li>Query:</li>
+        </ul>
+        <pre>{{ query|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
+    </p>
+    <p>Regards.</p>
 </body>
 </html>
 {%- endblock xliff_extracted %}
