--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
@@ -79,7 +79,7 @@
                     </li>
                     <li class="user-footer">
                         <a href="{{ path(routes.USER_PROFILE) }}" class="btn btn-default btn-flat">{{ 'user.profile.title'|trans({}, 'emsco-user') }}</a>
-                        {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+                        {% if is_granted('IS_IMPERSONATOR') %}
                             <a href="{{ path('emsco_user_index', {'_switch_user': '_exit'}) }}" class="btn btn-default btn-flat float-end">{{ 'user.logout.exit'|trans({}, 'emsco-user') }}</a>
                         {% else %}
                             <a href="{{ path(routes.USER_LOGOUT) }}" class="btn btn-default btn-fla float-end">{{ 'user.logout.submit'|trans({}, 'emsco-user') }}</a>
