--- a/demo/skeleton/template/fragments/structure.html.twig
+++ b/demo/skeleton/template/fragments/structure.html.twig
@@ -1,5 +1,5 @@
 {% extends '@EMSCH/template/variables.twig' %}
-{% set rawData = section|emsch_get.source %}
+{% set rawData = section|emsch_get(['paths', 'structure']).source %}
 {% set paths = rawData.paths|default([])|filter(p => p.locale == locale)|array_key('uid') %}
 {% set structure = rawData.structure|default("{}")|ems_json_menu_nested_decode %}
 {% set urls = {} %}
