--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -71,7 +71,7 @@
 
 		{% if app.user %}
 		  {{ render(controller('EMS\\CoreBundle\\Controller\\ChannelController::menu')) }}
-		  {{ render(controller('EMS\\CoreBundle\\Controller\\NotificationController::menuNotificationAction')) }}
+		  {{ render(controller('EMS\\CoreBundle\\Controller\\NotificationController::menuNotification')) }}
         {% endif %}
 
           <!-- Tasks Menu -->
