--- a/EMS/core-bundle/src/Resources/views/base.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base.html.twig
@@ -124,7 +124,7 @@
 
 		{% if app.user %}
 		  {{ render(controller('EMS\\CoreBundle\\Controller\\ChannelController::menu')) }}
-		  {{ render(controller('EMS\\CoreBundle\\Controller\\NotificationController::menuNotificationAction')) }}
+		  {{ render(controller('EMS\\CoreBundle\\Controller\\NotificationController::menuNotification')) }}
         {% endif %}
 
           <!-- Tasks Menu -->
