--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -136,7 +136,7 @@
   </header>
 
 		{% if app.user %}
-		  	{{ render(controller('EMS\\CoreBundle\\Controller\\TwigElementsController::sideMenuAction')) }}
+		  	{{ render(controller('EMS\\CoreBundle\\Controller\\TwigElementsController::sideMenu')) }}
 		{% else %}
             {% include '@EMSAdminUI/bootstrap5/elements/side-menu.html.twig' with {
 				'contentTypes': get_content_types()
@@ -237,7 +237,7 @@
           <h3 class="control-sidebar-heading">Last commands</h3>
           <ul class="control-sidebar-menu" id="commands-log">
               {% if app.user %}
-                  {{ render(controller('EMS\\CoreBundle\\Controller\\TwigElementsController::jobsAction', {
+                  {{ render(controller('EMS\\CoreBundle\\Controller\\TwigElementsController::jobs', {
                       'username' : app.user.username
                   } ) ) }}
               {% endif %}
