--- a/EMS/core-bundle/src/Resources/views/ajax/extract-data-file.json.twig
+++ b/EMS/core-bundle/src/Resources/views/ajax/extract-data-file.json.twig
@@ -1,9 +1,9 @@
 {% extends '@EMSCore/ajax/notification.json.twig' %}
 
 {% block body %}
-	"content": {{ (data.content is defined ? data.content : '')|json_encode|raw }},
-	"author": {{ (data.author is defined ? data.author : (data.Author is defined ? data.Author : ''))|json_encode|raw }},
-	"date": {{ (data.date is defined ? data.date : '')|json_encode|raw }},
-	"language": {{ (data.language is defined ? data.language : '')|json_encode|raw }},
-	"title": {{ (data.title is defined ? data.title : '')|json_encode|raw }},
+	"content": {{ (data.content)|json_encode|raw }},
+	"author": {{ data.author|json_encode|raw }},
+	"date": {{ data.date|json_encode|raw }},
+	"language": {{ data.locale|json_encode|raw }},
+	"title": {{ data.title|json_encode|raw }},
 {% endblock %}
