--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/field.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/field.html.twig
@@ -5,43 +5,33 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
-		<li><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Edit {{ contentType.singularName }}</a></li>
-		<li><a href="{{ path("ems_contenttype_reorder", {contentType: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Reorder {{ contentType.singularName }}</a></li>
-		<li class="active">Field</li>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Edit {{ contentType.singularName }}</a></li>
+		<li class="breadcrumb-item"><a href="{{ path("ems_contenttype_reorder", {contentType: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Reorder {{ contentType.singularName }}</a></li>
+		<li class="breadcrumb-item active">Field</li>
 	</ol>
 {% endblock %}
 
 {% block body %}
-
-    {{ form_start(form) }}
-
+	{{ form_start(form) }}
 	<div class="row">
-		<div class="col-md-12">
-
-			<div class="box ">
-				<div class="box-header with-border">
-					<i class="fa fa-sitemap"></i>
-					<h3 class="box-title">{{ contentType.singularName }}'s field: {{ field.name }}</h3>
+		<div class="col-12">
+			<div class="card card-{{ theme_color }} card-outline">
+				<div class="card-header">
+					<h3 class="card-title"><i class="fa fa-sitemap"></i> {{ contentType.singularName }}'s field: {{ field.name }}</h3>
 				</div>
 				<!-- /.box-header -->
-				<div class="box-body">
-
-					<div class="col-md-12">
-                        {{ form_row(form.fieldType) }}
-					</div>
-
-
-
+				<div class="card-body">
+					{{ form_row(form.fieldType) }}
 				</div>
 				<!-- /.box-body -->
-				<div class="box-footer">
-					<div class="btn-group pull-right">
-                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#edit_field_type_fieldType_modal_add">
-                            <i class="fa fa-plus"></i> Subfield
-                        </button>
-                        {{ form_widget(form.save) }}
-                        {{ form_widget(form.saveAndClose) }}
+				<div class="card-footer text-end">
+					<div class="btn-group">
+						<button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-target="#edit_field_type_fieldType_modal_add">
+								<i class="fa fa-plus"></i> Subfield
+						</button>
+						{{ form_widget(form.save) }}
+						{{ form_widget(form.saveAndClose) }}
 					</div>
 				</div>
 			</div>
